<resources>
    <string name="app_name">WhatsApp Clone</string>
    <string name="calls_tab_txt">Calls</string>
    <string name="status_tab_txt">Status</string>
    <string name="chats_tab_txt">Chats</string>
    <string name="user_profile_picture_txt">User Profile Picture</string>
    <string name="message_status_tick_text">Message Status Tick</string>
    <string name="photugram_downloader">Whatsapp Clone</string>
    <string name="photo_tab_txt">Camera</string>
    <string name="video_tab_txt">Chats</string>
    <string name="reel_tab_txt">Status</string>
    <string name="igtv_tab_txt">Calls</string>
    <string name="theme_menu_item_txt">Theme</string>
    <string name="user_profile_picture_status_txt">User Profile Picture</string>
    <string name="recent_updates_text">Recent updates</string>
    <string name="my_status_text">My Status</string>
    <string name="tap_to_add_status_update_text">Tap to add status update</string>
    <string name="don_t_be_a_css_to_my_html_be_javascript">Don\'t be a CSS to my HTML, be JavaScript</string>
    <string name="akhilesh_garg">Akhilesh Garg</string>
    <string name="account">Account</string>
    <string name="privacy_security_change_number">Privacy, security, change number</string>
    <string name="chats">Chats</string>
    <string name="theme_wallpaper_chat_history">Theme, wallpaper, chat history</string>
    <string name="notifications">Notifications</string>
    <string name="message_group_call_tones"><![CDATA[Message, group & call tones]]></string>
    <string name="storage_and_data">Storage and data</string>
    <string name="network_usage_auto_download">Network usage, auto-download</string>
    <string name="help_centre_contact_us_privacy_policy">Help centre, contact us, privacy policy</string>
    <string name="help">Help</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="settings_from_akhilesh_garg">∞ Akhil</string>
    <string name="made_with_by">Made with ❤️ by</string>
    <string name="call_status_icon">Call Status</string>
    <string name="call_icon">Call Icon</string>
    <string name="tap_and_hold_on_a_chat_for_more_options">Tap and hold on a chat for more options</string>
    <string name="welcome_to_whatsapp">Welcome To WhatsApp</string>
    <string name="welcome_screen_logo_image">Welcome Screen Logo Image</string>
    <string name="read_our_privacy_policy_tap_agree_and_continue_to">Read our <a href="#">Privacy Policy</a>. Tap "Agree and continue" to</string>
    <string name="accept_the_terms_of_service">accept the <a href="#">Terms of Service</a>.</string>
    <string name="welcome_screen_from">from</string>
    <string name="agree_and_continue_btn_text">Agree And Continue</string>
    <string name="welcome_screen_logo">Welcome Screen Logo</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="whatsapp_sms_rate_message">App will need to verify your phone number. <a href="#">What\'s my number?</a></string>
    <string name="enter_your_country_code_and_phone_number">Enter your country code and phone number:</string>
    <string name="enter_phone_country_code">+%d</string>
    <string name="next_btn_text">Next</string>
    <string name="phone_number_placeholder">Phone Number</string>
    <string name="carrier_sms_charges_may_apply">Carrier charges may apply</string>
    <string name="verify_phone_header_text">Verify +%s %s</string>
    <string name="waiting_to_automatically_detect_an_sms_sent_to">Waiting to automatically detect an SMS sent to</string>
    <string name="wrong_number">\u0020Wrong Number?</string>
    <string name="enter_6_digit_code">Enter 6-digit code</string>
    <string name="resend_sms_txt">Resend SMS</string>
    <string name="sms_icon">SMS Icon</string>
    <string name="call_me">Call me</string>
    <string name="mobile_number_ongoing_verification">+%s %s.</string>
    <string name="profile_info_text">Profile Info</string>
    <string name="please_provide_your_name_and_an_optional_profile_photo">Please provide your name and an optional profile photo</string>
    <string name="optional_profile_photo">Optional Profile Photo</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="shared_preference_file_key">com.akgarg.whatsappuiclone.SHARED_PREFERENCE_FILE_KEY</string>
    <string name="registered_user_name">%s</string>
    <string name="entered_phone_number"><b>%s %s</b></string>
    <string name="show_all_contacts_fab">Show All Contacts Fab</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="select_new_profile_picture_button">Select New Profile Picture Button</string>
    <string name="profile_setting_name">Name</string>
    <string name="this_is_not_your_username_or_pin_this_name_will_be_visible_to_your_contacts">This is not your username or pin. This name will be visible to your contacts</string>
    <string name="profile_setting_about">About</string>
    <string name="profile_setting_phone">Phone</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="share_profile_picture">Share Profile Picture</string>
    <string name="profile_update_phone">+%s %s</string>
    <string name="privacy">Privacy</string>
    <string name="security">Security</string>
    <string name="two_step_verification">Two-step verification</string>
    <string name="change_number">Change number</string>
    <string name="request_account_info">Request account info</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="logout">Logout</string>
    <string name="display">Display</string>
    <string name="theme">Theme</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="chat_settings">Chat settings</string>
    <string name="enter_is_send">Enter is send</string>
    <string name="enter_key_will_send_your_message">Enter key will send your message</string>
    <string name="media_visibility">Media visibility</string>
    <string name="media_visibility_footer">Show newly downloaded media in your phone\'s gallery</string>
    <string name="font_size">Font size</string>
    <string name="archive_chats">Archive chats</string>
    <string name="keep_chats_archived">Keep chats archived</string>
    <string name="keep_chats_archive_footer">Archive chats will remain archived when you received a new message</string>
    <string name="app_language">App Language</string>
    <string name="chat_backup">Chat backup</string>
    <string name="chat_history">Chat history</string>
    <string name="system_theme_text">System default</string>
    <string name="light_theme_text">Light</string>
    <string name="dark_theme_text">Dark</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="lan_device">Phone\'s Language (%s)</string>
    <string name="lan_english">English</string>
    <string name="lan_hindi">हिन्दी</string>
    <string name="lan_gujarati">ગુજરાતી</string>
    <string name="lan_marathi">मराठी</string>
    <string name="lan_punjabi">ਪੰਜਾਬੀ</string>
    <string name="link_device_logo_image">Link Device Logo Image</string>
    <string name="link_a_device">Link a device</string>
    <string name="use_whatsapp_on_other_devices">Use WhatsApp on other\ndevices</string>
    <string name="device_status">Device status</string>
    <string name="tap_a_device_to_logout">Tap a device to logout</string>
    <string name="windows_logo">Windows Logo</string>
    <string name="windows">Windows</string>
    <string name="last_active_today_at_11_18_pm">Last Active today at 11:18 pm</string>
    <string name="payment_methods">Payment methods</string>
    <string name="history">History</string>
    <string name="payment_logo_image">Payment Logo Image</string>
    <string name="no_payment_history">No payment history</string>
    <string name="moderator_icon_image">Moderator Icon Image</string>
    <string name="payment_disclaimer_msg">To protect your security, WhatsApp does not store your UPI PIN or full bank account number. <a href="#">Learn more</a></string>
    <string name="all_payment_method">Add payment method</string>
    <string name="add_payment_method_icon_image">Add Payment Method Icon Image</string>
    <string name="upi_logo_image">UPI Logo Image</string>
    <string name="new_payment_fab">New Payment Fab</string>
    <string name="new_payment">New Payment</string>
    <string name="help_centre">Help Centre</string>
    <string name="contact_us">Contact us</string>
    <string name="questions_need_help">Questions? Need help?</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="app_info">App info</string>
    <string name="app_info_background_image">App Info Background Image</string>
    <string name="whatsapp_clone_app_info">WhatsApp Clone</string>
    <string name="app_logo">App Logo</string>
    <string name="_2019_2022_akhil_inc">© 2019—2022 Akhil Inc.</string>
    <string name="licenses"><a href="#">LICENSES</a></string>
    <string name="app_info_version">Version %d.%s</string>
    <string name="back_to_all_chats_image">Back To All Chats Image</string>
    <string name="chat_profile_picture">Chat Profile Picture</string>
    <string name="chat_name">%s</string>
    <string name="video_call_icon">Video Call Icon</string>
    <string name="audio_call_icon">Audio Call Icon</string>
    <string name="extra_chat_options_icon">Extra Chat Options Icon</string>
    <string name="message">Message</string>
    <string name="emoji_icon">Emoji Icon</string>
    <string name="send_message_button">Send Message Button</string>
    <string name="chat_profile_registered_number">+%s %s</string>
    <string name="media_links_and_docs">Media, links and docs</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="custom_notifications">Custom notifications</string>
    <string name="starred_messages">Starred messages</string>
    <string name="encryption">Encryption</string>
    <string name="encryption_footer">Messages and cakks are ebd-to-end encrypted. Tap to verify.</string>
    <string name="disappearing_messages">Disappearing messages</string>
    <string name="off">Off</string>
    <string name="block_user_text">Block %s</string>
    <string name="report_user_text">Report %s</string>
    <string name="add">Add</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="chat_profile_last_seen">Last seen %s</string>
    <string name="send_message_delivery_status">Send Message Delivery Status</string>

    <string-array name="countries">
        <item>India</item>
        <item>Dubai</item>
        <item>United States</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_contact">Select contact</string>
    <string name="contact_profile_picture_txt">Contact Profile Picture</string>
    <string name="new_group_picture_txt">New Group Picture</string>
    <string name="new_group">New group</string>
    <string name="new_contact_picture_txt">New Contact Picture</string>
    <string name="new_contact">New Contact</string>
    <string name="all_contacts_count">%d contacts</string>


</resources>