<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/linked_devices_bg"
    android:orientation="vertical"
    tools:context=".activities.LinkedDevicesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/linked_device_container_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:contentDescription="@string/link_device_logo_image"
            android:src="@drawable/linked_devices_img"
            app:tint="@color/linked_devices_image_tint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/use_whatsapp_on_other_devices"
            android:textAlignment="center"
            android:textColor="@color/use_on_other_text"
            android:textSize="26sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/link_device_button_tint"
            android:text="@string/link_a_device" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/linked_device_container_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:text="@string/device_status"
            android:textAllCaps="true"
            android:textColor="@color/link_device_text_color"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/tap_a_device_to_logout"
            android:textColor="@color/link_device_text_color"
            android:textSize="13sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/windowsLogoCardView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:backgroundTint="#32948a"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/windows_logo"
                    android:src="@drawable/windows_logo"
                    app:tint="#ffffff" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/windowsLogoCardView"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/windows"
                    android:textColor="@color/use_on_other_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/last_active_today_at_11_18_pm"
                    android:textColor="@color/link_device_text_color" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>